[package]
name = "carrybox"
version = "0.1.0"
description = "CarryBox - mover archivos grandes facil (subir a S3 / descargar por SSH-SFTP-FTP)"
authors = ["Christian Arevalo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carrybox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cliente FTP (modo Descargar - proveedor FtpSource). Version sync; las operaciones
# se ejecutan en spawn_blocking para no bloquear el runtime async de Tauri.
# feature native-tls = soporte FTPS (FTP cifrado). En Windows usa SChannel del SO
# (sin OpenSSL); en el port a Linux se evaluara rustls detras de la misma abstraccion.
suppaftp = { version = "6", features = ["native-tls"] }
native-tls = "0.2"
# Para transmitir al log de la UI los comandos/respuestas FTP que suppaftp registra.
log = "0.4"
# SFTP (modo Descargar - proveedor SftpSource). Cliente SSH/SFTP en Rust puro,
# sin OpenSSL ni binarios externos (requisito del plan). Una sola conexion (puerto
# 22), sin canal de datos separado -> sin el problema de puertos pasivos del FTP.
# Backend cripto "ring": en Windows trae objetos precompilados y NO necesita
# NASM (a diferencia del default aws-lc-rs). Mantiene el build sin herramientas extra.
russh = { version = "0.61", default-features = false, features = ["ring"] }
russh-sftp = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync", "macros", "fs"] }
# Modo Subir a S3: cliente S3-compatible (JetBackup). endpoint custom + path-style.
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

